[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Gameplay/Body.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Knight_body.png" type="Texture" id=2]
[ext_resource path="res://Sprites/FX/Goop_puddle.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Fonts/CHILLER.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/FX/Goop_trail.png" type="Texture" id=5]
[ext_resource path="res://Sprites/FX/Dust_puff.png" type="Texture" id=6]
[ext_resource path="res://SFX/SFX/Kill.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/SFX/Dragging.wav" type="AudioStream" id=8]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12.5, 6.5 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 6.08523, 0, 0, Vector2( 0.257143, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.504951, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=5]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.50495, 100 ), 0.0, 0.0, 0, 0, Vector2( 1, 100 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.843575, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.183168, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.490099, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Body" type="KinematicBody2D" groups=["Body"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -6.5 )
shape = SubResource( 7 )

[node name="Goop_trail" type="Line2D" parent="."]
z_index = -5
width_curve = SubResource( 4 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 5 )
texture_mode = 1
joint_mode = 1

[node name="Interaction_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_box"]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Text" type="Node2D" parent="Interaction_box"]
z_index = -5

[node name="Label" type="Label" parent="Interaction_box/Text"]
margin_left = -20.0
margin_top = -47.0
margin_right = 37.0
margin_bottom = -8.0
custom_colors/font_color = Color( 0.631373, 0.239216, 0.466667, 1 )
custom_fonts/font = SubResource( 3 )
text = "E to execute
Q to drag"

[node name="Tween" type="Tween" parent="Interaction_box/Text"]

[node name="Body_sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -15.801 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -5
emitting = false
lifetime = 0.2
explosiveness = 0.94
texture = ExtResource( 3 )
direction = Vector2( 0, 0 )
spread = 180.0
initial_velocity = 82.57
initial_velocity_random = 1.0
scale_amount = 1.1
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 0, -3 )
z_index = -5
emitting = false
lifetime = 2.0
explosiveness = 1.0
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
damping_curve = SubResource( 5 )
scale_amount = 1.2
scale_amount_random = 1.0
color_ramp = SubResource( 6 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
emitting = false
amount = 14
lifetime = 0.3
local_coords = false
texture = ExtResource( 6 )
emission_shape = 2
emission_rect_extents = Vector2( 11, 1 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 27.52
initial_velocity_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 8 )
color = Color( 0.937255, 0.796078, 0.517647, 1 )

[node name="Goop_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Tut_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SFX" type="Node2D" parent="."]

[node name="Kill" type="AudioStreamPlayer2D" parent="SFX"]
volume_db = 2.0
bus = "Game"
script = ExtResource( 9 )
samples = [ ExtResource( 7 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[node name="Dragging" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 8 )
bus = "Game"

[connection signal="body_entered" from="Interaction_box" to="." method="_on_Interaction_box_body_entered"]
[connection signal="body_exited" from="Interaction_box" to="." method="_on_Interaction_box_body_exited"]
[connection signal="timeout" from="Goop_timer" to="." method="_on_Goop_timer_timeout"]
[connection signal="timeout" from="Tut_timer" to="." method="_on_Tut_timer_timeout"]
